style.css
@import url('https://fonts.googleapis.com/css2?family=Oxanium&display=swap');
:root {
  --box-shadow: rgb(100, 100, 100);
  --scroll-shadow: rgb(54, 54, 54);
}
.dark {
  --main-bg: rgb(27, 38, 44);
  --bg-1: rgb(15, 76, 117);
  --bg-2: rgb(50, 130, 184);
  --bg-3: rgb(187, 225, 250);
  --btn-hover: var(--bg-2);
  --grayheader: rgb(105, 105, 105);
  --scroll-track: var(--bg-1);
  --scroll-thumb: var(--bg-2);
}
.light {
  --main-bg: rgb(224, 252, 255);
  --bg-1: rgb(144, 242, 255);
  --bg-2: rgb(110, 182, 255);
  --bg-3: rgb(112, 152, 218);
  --btn-hover: var(--bg-2);
  --grayheader: rgb(187, 187, 187);
  --scroll-track: var(--bg-1);
  --scroll-thumb: var(--bg-2);
}
* {
  font-family: 'Oxanium', cursive !important;
  color: black;
  transition: background-color .5s, color .5s;
  scrollbar-width: thin;
  scrollbar-color: var(--scroll-track) var(--scroll-thumb);
  box-sizing: border-box;
}
body {
  display: grid;
  grid-template-rows: 40px 1fr 40px;
  row-gap: 20px;
  justify-content: center;
  background-color: var(--main-bg);
}
footer,
article,
header {
  display: flex;
  flex-direction: row;
  justify-self: center;
  flex-wrap: wrap;
  background-color: var(--bg-1);
  border-radius: 10px;
  box-shadow: 0 0 5px var(--box-shadow);
}
footer,
header {
  column-gap: 5px;
  padding: 5px;
  color: white;
}
footer a {
  width: 100%;
  height: 100%;
}
article {
  width: calc(100vw - 150px);
  height: calc(96vh - 80px - 40px);
}
ul {
  list-style-type: none;
}
article > div {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  align-items: center;
  padding: 5px;
  row-gap: 10px;
}
.list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  overflow-y: auto;
  margin: 5px;
  margin-top: 0;
}
::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}
::-webkit-scrollbar-track,
::-webkit-scrollbar-thumb {
  background-clip: padding-box;
  border-radius: 7.5px;
  border-style: solid;
  border-width: 2px;
  border-color: transparent;
}
::-webkit-scrollbar-track {
  box-shadow: 0 0 3px var(--scroll-shadow);
  border-width: initial;
  border: 0px solid transparent;
  background-color: var(--scroll-track);
  margin: 5px;
}
::-webkit-scrollbar-thumb {
  border: 2px solid transparent;
  border-radius: 4px;
  background-color: var(--scroll-thumb);
  cursor: move;
}
.grayheader {
  display: grid;
  grid-template-columns: auto 1fr auto;
  width: calc(100% - 10px);
  margin: 5px;
  margin-bottom: 0;
  align-items: center;
  font-size: 20px;
  padding: 10px 0 10px 0;
  border-radius: 5px;
  background-color: var(--grayheader);
  box-shadow: 0 0 5px var(--box-shadow);
}
.grayheader.even {
  grid-template-columns: 1fr 1fr 1fr;
}
.grayheader > * {
  width: fit-content;
}
.grayheader button {
  background-color: var(--bg-3);
}
.grayheader button.back {
  grid-column: 1/2;
  justify-self: start;
  margin-left: 10px;
}
.grayheader span {
  grid-column: 2/3;
  justify-self: center;
}
.grayheader button.offsite {
  grid-column: 3/4;
  justify-self: end;
  margin-right: 10px;
}
button {
  all: initial;
  cursor: pointer;
  padding: 5px;
  border-radius: 5px;
  transition: background-color .3s, box-shadow .3s;
}
button:hover {
  background-color: var(--btn-hover);
  box-shadow: 0 0 3px var(--box-shadow);
}
input[type=number]::-webkit-inner-spin-button {
  -webkit-appearance: none;
}
.tool.card {
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-self: stretch;
  text-align: center;
  column-gap: 10px;
  flex: 1 0 500px;
  max-width: 700px;
  background-color: var(--bg-2);
  padding: 5px;
  margin: 5px;
  border-radius: 5px;
  box-shadow: 0 0 5px var(--box-shadow);
  overflow: hidden;
}
.tool.card img {
  width: 100%;
  border-radius: 5px;
  align-self: center;
  justify-self: center;
}
.tool.card span {
  color: white;
}
.tool.card p {
  font-size: 18px;
  color: white;
}
.explantation {
  display: flex;
  flex-direction: column;
  row-gap: 10px;
  width: 100%;
  padding: 5px;
  padding-right: 8px;
  margin: 0;
  margin-right: 5px;
  overflow-y: auto;
}
.explantation > button,
.explantation li {
  display: grid;
  grid-template-columns: 1fr 1fr;
  text-align: center;
  column-gap: 10px;
  background-color: var(--bg-2);
  padding: 5px;
  border-radius: 10px;
  box-shadow: 0 0 5px var(--box-shadow);
  height: fit-content;
  width: 100%;
}
.explantation li.smallimg,
.explantation.small-img > button,
.explantation.small-img li {
  grid-template-columns: 200px 1fr;
}
@media (max-width: 550px) {
  .explantation li.smallimg,
  .explantation.small-img > button,
  .explantation.small-img li {
    grid-template-columns: 1fr;
    grid-template-rows: 1fr auto;
    row-gap: 10px;
  }
  .explantation.small-img > button div,
  .explantation.small-img li div {
    grid-row: 1/2;
  }
  body .explantation.small-img > button img,
  body .explantation.small-img li img {
    grid-row: 2/3;
    width: 100%;
  }
}
@media (max-width: 920px) {
  .explantation:not(.small-img) > button,
  .explantation:not(.small-img) li {
    grid-template-columns: 1fr;
    grid-template-rows: 1fr auto;
    row-gap: 10px;
  }
  .explantation:not(.small-img) > button div,
  .explantation:not(.small-img) li div {
    grid-row: 1/2;
  }
  .explantation:not(.small-img) > button img,
  .explantation:not(.small-img) li img {
    grid-row: 2/3;
  }
  .grayheader {
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    row-gap: 5px;
  }
  .grayheader.one {
    grid-template-columns: auto 1fr auto;
    grid-template-rows: 1fr;
  }
  #body .teams > div:first-child > div {
    flex-direction: column;
  }
  #body .teams button {
    width: calc(100% - 10px);
  }
  #body .teams ul button {
    width: fit-content;
  }
  #body .grayheader > * {
    justify-self: center;
  }
  .grayheader button.back {
    grid-column: 1/2;
    grid-row: 2/3;
    margin: 0;
  }
  .grayheader span {
    grid-column: 1/2;
    grid-row: 1/2;
  }
  .grayheader button.offsite {
    grid-column: 1/2;
    grid-row: 3/4;
    margin: 0;
  }
  #classList ul {
    max-height: calc(100vh - 325px);
  }
}
.explantation li div {
  width: 100%;
  display: flex;
  flex-direction: column;
}
.explantation > button p,
.explantation li p {
  font-size: 18px;
  margin-top: 10px;
}
.explantation > button img,
.explantation li img {
  width: 100%;
  border-radius: 5px;
}
.explantation.small-img > button img,
.explantation.small-img li img {
  width: 200px;
}
.explantation li button {
  background-color: var(--bg-3);
  box-shadow: 0 0 5px var(--box-shadow);
  width: fit-content;
  align-self: center;
  margin-top: 7px;
}
.list.choice {
  display: flex;
  flex-direction: column;
}
.list.choice .card {
  background-color: var(--bg-2);
  padding: 5px;
  margin: 5px;
  border-radius: 10px;
  box-shadow: 0 0 5px var(--box-shadow);
  font-size: 25px;
  width: fit-content;
  align-self: center;
}
.keuze {
  display: grid;
  grid-template-rows: auto 1fr;
  width: 100%;
  height: 100%;
  position: relative;
  overflow: hidden;
}
.keuze .vragen {
  display: flex;
  flex-direction: row;
  height: fit-content;
  margin: 0;
  padding: 0;
  overflow-x: scroll;
}
.keuze .vragen li {
  display: grid;
  align-content: center;
  flex: 0 0 auto;
  gap: 5px;
  margin-bottom: 5px;
  padding: 8px;
  margin: 5px;
  margin-right: 0;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 20px 1fr;
  border-radius: 5px;
  box-shadow: 0 0 5px var(--box-shadow);
  background-color: var(--bg-1);
}
.keuze .vragen li:last-child {
  margin-right: 5px;
}
.keuze .vragen li span {
  grid-column: 1/3;
}
.keuze .vragen li button {
  text-align: center;
}
.keuze > div {
  background-color: var(--bg-2);
  box-shadow: 0 0 5px var(--box-shadow);
  border-radius: 10px;
  margin: 5px;
  overflow: hidden;
}
.keuze > div:nth-child(1) {
  margin-bottom: 5px;
  padding: 0;
  padding-bottom: 5px;
}
.keuze .list {
  margin: 0;
  margin-right: 3px;
  padding-right: 2px;
  overflow-y: scroll;
  height: calc(100% - 5px);
}
.keuze .list::-webkit-scrollbar-track {
  margin-bottom: 0;
}
.keuze .list .tool.card {
  background-color: var(--bg-3);
}
.answered {
  opacity: .7;
  pointer-events: none;
}
.answered button {
  pointer-events: none;
}
.question-dp-none,
.dp-none {
  display: none !important;
}
.teams {
  display: grid;
  width: 100%;
  height: 100%;
  grid-template-columns: 1fr 1fr;
}
.teams > div {
  margin: 5px;
  background-color: var(--bg-2);
  border-radius: 5px;
  box-shadow: 0 0 5px var(--box-shadow);
  display: grid;
  grid-template-rows: auto 1fr;
}
.teams > div:first-child > div {
  display: flex;
  flex-direction: row;
  gap: 5px;
}
.teams input {
  all: unset;
  flex: 1 0 auto;
  padding: 5px;
  border-radius: 5px;
  box-shadow: 0 0 5px var(--box-shadow);
  background-color: var(--bg-1);
}
.teams button {
  background-color: var(--bg-3);
  box-shadow: 0 0 5px var(--box-shadow);
  width: fit-content;
}
.teams button:hover {
  background-color: var(--bg-1);
}
.addMembers > div:first-child {
  margin: 5px;
  margin-bottom: 0;
}
#classList {
  margin: 5px 5px 0 0;
  overflow-y: scroll;
  height: calc(100vh - 285px);
  padding-right: 5px;
}
#classList ul {
  display: grid;
  grid-auto-flow: row;
  gap: 7px;
  width: 100%;
  height: fit-content;
  padding: 0;
  margin: 5px;
}
#classList li {
  display: flex;
  justify-content: space-between;
  background-color: var(--bg-1);
  box-shadow: 0 0 5px var(--box-shadow);
  align-items: center;
  padding-left: 10px;
  border-radius: 5px;
  height: fit-content;
}
.dark #teamsList > div ul li,
.dark #classList li {
  color: white;
}
.light #teamsList > div ul li,
.light #classList li {
  color: black;
}
/* #classList li:first-child {
  margin-top: 5px;
}
#classList li:last-child {
  margin-bottom: 5px;
} */
#classList li button {
  margin: 5px;
  background-color: var(--bg-3);
}
#classList li button:hover {
  background-color: var(--bg-2);
}
#body .error {
  background-color: red;
}
#teamsList::-webkit-scrollbar-track {
  margin-top: 3px;
  margin-bottom: 2px;
}
.createTeams > div:first-child {
  display: grid;
  grid-template-columns: auto 1fr auto;
  align-items: center;
  column-gap: 5px;
  margin: 5px;
  margin-bottom: 0;
}
#teamsList {
  max-height: calc(100vh - 285px);
  overflow-y: scroll;
  margin: 5px 5px 0 3px;
  padding-right: 3px;
}
#teamsList > div {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
  flex-wrap: wrap;
  padding: 0;
}
#teamsList > div ul {
  display: flex;
  flex-direction: column;
  row-gap: 5px;
  background-color: var(--bg-1);
  box-shadow: 0 0 5px var(--box-shadow);
  flex: 1 0 150px;
  max-width: 200px;
  border-radius: 5px;
  text-align: center;
  margin: 3px;
  padding: 0;
}
#teamsList > div ul span {
  background-color: var(--bg-3);
  box-shadow: 0 0 5px var(--box-shadow);
  margin: 5px;
  padding: 5px;
  width: calc(100% - 10px);
  border-radius: 5px;
}
#teamsList > div ul li:last-child {
  margin-bottom: 5px;
}

